--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/sgcuber24/easybmtc-api#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "nodemon": "^1.19.2"
   }
 }
