--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "API for EasyBMTC App",
   "main": "index.js",
   "scripts": {
-    "start": "node index",
-    "dev": "nodemon index"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,10 @@
   },
   "homepage": "https://github.com/sgcuber24/easybmtc-api#readme",
   "dependencies": {
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "mongoose": "^5.6.13",
+    "morgan": "^1.9.1",
     "nodemon": "^1.19.2"
   }
 }
