--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "mongoose": "^5.6.13",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.2"
+  },
+  "devDependencies": {
+    "eslint": "^6.3.0",
+    "eslint-config-google": "^0.14.0"
   }
 }
